--- a/Army/Army/Unit.csproj
+++ b/Army/Army/Unit.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Files\Troop.cs" />
+    <Compile Include="Files\Unit.cs" />
+    <Compile Include="Files\Warrior.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
